--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ buildscript {
 
     repositories {
         mavenCentral()
-        maven { url "http://kotlin.bintray.com/kotlinx" }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -19,14 +18,14 @@ apply plugin: "kotlin"
 mainClassName = "blotor.BlotorKt"
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
 dependencies {
+    compile "commons-io:commons-io:2.6"
     compile "org.apache.logging.log4j:log4j-core:2.11.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "org.jetbrains.kotlinx:kotlinx-html-jvm:0.6.9"
+    compile "org.thymeleaf:thymeleaf:3.0.9.RELEASE"
 }
 
 compileKotlin {
