--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group "blotor"
-version "1.0-SNAPSHOT"
+version "1.0-SNAPSHOT-2"
 
 apply plugin: "application"
 apply plugin: "kotlin"
